[package]
name = "torrentino"
version = "0.1.0"
authors = ["Federico Marcos <marcosfede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.0"
serde = {version = "^1.0.0", features = ["derive"]}
serde_derive = "^1.0.0"
serde_bytes = "0.11.3"
