[package]
name = "torrentino"
version = "0.1.0"
authors = ["Federico Marcos <marcosfede@gmail.com>"]
edition = "2018"

[dependencies]
serde_bencode = "^0.2.0"
serde = {version = "^1.0.0", features = ["derive"]}
serde_derive = "^1.0.0"
serde_bytes = "0.11.3"
rust-crypto = "0.2.36"
reqwest = { version = "0.10.1", features = ["blocking"] }

[lib]
name = "torrentino"
crate-type = ["rlib", "cdylib"]
